--- a/environment.yml
+++ b/environment.yml
@@ -18,6 +18,7 @@ dependencies:
   - torchvision=0.12.0=py39_cu113
   - wheel=0.37.1=pyhd8ed1ab_0
   - pip:
+    - einops==0.4.1
     - ffcv==0.0.3
     - kymatio==0.2.1
     - matplotlib==3.5.1
