--- a/configs/imagenet_semi_supervised.yaml
+++ b/configs/imagenet_semi_supervised.yaml
@@ -1,5 +1,5 @@
 batch_size: 128              # batch size for training
-epochs: 100                  # number of epochs to train for
+epochs: 10                  # number of epochs to train for
 eval_every: 1                # frequency of evaluating on val set (epochs)
 n_workers: 16                # number of workers for dataloader
 fp16: True                   # whether to use fp16 precision
@@ -10,14 +10,16 @@ fine_tune_from:              # path to pre-trained model to fine-tune from
 wd: 1e-6                     # weight decay
 lr: 1e-4                     # learning rate
 
+num_features: 2048
+
 dataset:                     # dataset to use
   name: imagenet             # dataset name
   n_classes: 1000            # dataset name
   size: 224                  # image size
   path: <>                   # path to the ImageNet folder. It should contain folders 'train' and 'val'
-  percentage: 1              # percentage of dataset to use for training
+  percentage: 10              # percentage of dataset to use for training
 
 encoder:                      # encoder parameters
   out_dim: 8192-8192-8192     # number of neurons in the projection layer
 
-comment: imagenet_semi_supervised_0.01
+comment: imagenet_semi_supervised_0.10_0.9
