--- a/configs/cifar100_clip_supervised.yaml
+++ b/configs/cifar100_clip_supervised.yaml
@@ -1,5 +1,5 @@
-batch_size: 512
-epochs: 1000
+batch_size: 128
+epochs: 500
 log_every: 100
 eval_every: 1
 n_workers: 16
@@ -11,13 +11,14 @@ fine_tune_from:
 
 std_margin: 1
 
-optimizer: adam
+optimizer: sgd
 wd: 5e-4
-lr: 1e-3
+lr: 5e-2
 
-scheduler: cosine
+scheduler: multistep
 #warmup_epochs: 50
-#milestones: [400, 600, 800]
+milestones: [200, 300, 400]
+gamma: 0.1
 
 dataset:
   name: cifar100
@@ -28,8 +29,9 @@ dataset:
 
 encoder_type: resnet
 encoder:
+  backbone: resnet8x4
   out_dim:
-  small_kernel: True
+  small_kernel: False
 
 clip:
   model_name: ViT-B-16
@@ -37,4 +39,4 @@ clip:
 
 teacher_path: ./lightning_logs/cifar100_vitb16_2_layer_classifier_sgd_cifar_aug/clip_ViT-B-16_2_layer_classifier_best_175.pth
 
-comment: cifar100_clip_supervised_VIT-B-16_adam_small_kernel_d_corr_distil_classifier_clip_orig_label_dcorr_cosine_bs_512
+comment: cifar100_clip_supervised_VIT-B-16_resnet8x4_d_corr_distil_classifier_clip_orig_label_dcorr_multistep
