--- a/configs/cifar100_clip_supervised.yaml
+++ b/configs/cifar100_clip_supervised.yaml
@@ -1,5 +1,5 @@
-batch_size: 128
-epochs: 500
+batch_size: 2048
+epochs: 8000
 log_every: 100
 eval_every: 1
 n_workers: 16
@@ -17,7 +17,7 @@ lr: 5e-2
 
 scheduler: multistep
 #warmup_epochs: 50
-milestones: [200, 300, 400]
+milestones: [1600, 2400, 3200]
 gamma: 0.1
 
 dataset:
@@ -29,9 +29,9 @@ dataset:
 
 encoder_type: resnet
 encoder:
-  backbone: resnet8x4
+  backbone: resnet50
   out_dim:
-  small_kernel: False
+  small_kernel: True
 
 clip:
   model_name: ViT-B-16
@@ -39,4 +39,4 @@ clip:
 
 teacher_path: ./lightning_logs/cifar100_vitb16_2_layer_classifier_sgd_cifar_aug/clip_ViT-B-16_2_layer_classifier_best_175.pth
 
-comment: cifar100_clip_supervised_VIT-B-16_resnet8x4_d_corr_distil_classifier_clip_orig_label_dcorr_multistep
+comment: cifar100_clip_supervised_VIT-B-16_d_corr_distil_classifier_clip_orig_label_dcorr_multistep_10_bs_2048
