--- a/configs/cifar20_clip_self_supervised.yaml
+++ b/configs/cifar20_clip_self_supervised.yaml
@@ -1,35 +1,35 @@
-batch_size: 256
-epochs: 1000
-warmup_epochs: 10
-log_every: 100
-eval_every: 1
-n_workers: 16
-fp16: True
-accumulate_grad_batches: 1
-normalize_z: False
+batch_size: 256               # batch size for training
+epochs: 100                   # number of epochs to train for
+warmup_epochs: 10             # number of warmup epochs (without learning rate decay)
+log_every: 100                # frequency of logging (steps)
+eval_every: 1                 # frequency of evaluating on val set (epochs)
+n_workers: 16                 # number of workers for dataloader
+fp16: True                    # whether to use fp16 precision
+accumulate_grad_batches: 1    # number of accumulation steps
+normalize_z: False            # whether to normalize z in encoder
 
-fine_tune_from:
+fine_tune_from:               # path to pre-trained model to fine-tune from
 
-std_margin: 1
+std_margin: 1                 # margin for the std values in the loss
 
-optimizer: adam
-wd: 1e-6
-lr: 1e-4
+optimizer: adam               # type of optimizer to use. Options: adam, adamw
+wd: 1e-6                      # weight decay
+lr: 1e-4                      # learning rate
 
-dataset:
-  name: cifar20
-  n_classes: 20
-  size: 32
+dataset:                      # dataset parameters
+  name: cifar20               # dataset name
+  size: 32                    # image size
+  n_classes: 20               # number of classes
   path:
-  aug_policy: cifar20
+  aug_policy: cifar20         # augmentation policy. Choices: autoaugment, randaugment, custom, cifar20, cifar
 
-encoder_type: resnet
-encoder:
-  out_dim: 8192-8192-8192
-  small_kernel: True
+encoder_type: resnet          # choices: resnet
+encoder:                      # encoder parameters
+  out_dim: 8192-8192-8192     # number of neurons in the projection layer
+  small_kernel: True          # whether to use small kernels. Small kernels are used for CIFAR20 dataset
 
-clip:
-  model_name: ViT-B-16
-  pretrained: laion400m_e32
+clip:                         # clip parameters
+  model_name: ViT-B-16        # clip model name
+  pretrained: laion400m_e32   # clip model checkpoint
 
 comment: cifar20_clip_self_supervised_scale_z_VIT-B-16
