--- a/configs/imagenet_clip_self_supervised.yaml
+++ b/configs/imagenet_clip_self_supervised.yaml
@@ -23,10 +23,10 @@ dataset:                       # dataset parameters
   path: <>                     # path to the ImageNet folder. It should contain folders 'train' and 'val'
   aug_policy: custom           # augmentation policy. Choices: autoaugment, randaugment, custom
 
-encoder_type: resnet           # choices: resnet, deit
+encoder_type: resnet           # choices: resnet
 encoder:                       # encoder parameters
   out_dim: 8192-8192-8192      # number of neurons in the projection layer
-  small_kernel: False          # whether to use small kernels. Small kernels are used for STL10 dataset
+  small_kernel: False          # whether to use small kernels
 
 clip:                          # CLIP model parameters
   model_name: ViT-B-16         # model backbone
