--- a/configs/imagenet_semi_supervised.yaml
+++ b/configs/imagenet_semi_supervised.yaml
@@ -1,5 +1,5 @@
-batch_size: 128              # batch size for training
-epochs: 10                  # number of epochs to train for
+batch_size: 256              # batch size for training
+epochs: 100                  # number of epochs to train for
 eval_every: 1                # frequency of evaluating on val set (epochs)
 n_workers: 16                # number of workers for dataloader
 fp16: True                   # whether to use fp16 precision
@@ -17,9 +17,9 @@ dataset:                     # dataset to use
   n_classes: 1000            # dataset name
   size: 224                  # image size
   path: <>                   # path to the ImageNet folder. It should contain folders 'train' and 'val'
-  percentage: 10              # percentage of dataset to use for training
+  percentage: 10             # percentage of dataset to use for training
 
 encoder:                      # encoder parameters
   out_dim: 8192-8192-8192     # number of neurons in the projection layer
 
-comment: imagenet_semi_supervised_0.10_0.9
+comment: imagenet_semi_supervised_0.10
